# pdf-autohighlighter

./: LICENSE  README.md  setup.cfg  setup.py
src/pdf_autohighlight/: main.py
