[metadata]
name = pdf-autohighlighter
description = Python script to auto-annotate PDFs by highlighting certain search terms
author = Marc Müller
license = MIT
url = https://github.com/Palculator/pdf-autohighlighter
long-description = file: README.rst
platforms = any
version = 0.1
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    click==8.*
    PyMuPDF==1.*
tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[test]
addopts = tests

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[options.entry_points]
console_scripts =
    pdfautohighlight = pdf_autohighlight.main:cli

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
